Update office location to new address: 24, Jaya Enclave, 3rd Floor, 1st Main Rd, Sadashivanagar, Bengaluru 560003, Karnataka

--- a/greenleaf-landfinder-main/index.html
+++ b/greenleaf-landfinder-main/index.html
@@ -39,6 +39,10 @@
       "email": "sales@greenleafventures.com",
       "address": {
         "@type": "PostalAddress",
+        "streetAddress": "24, Jaya Enclave, 3rd Floor, 1st Main Rd, Sadashivanagar",
+        "addressLocality": "Bengaluru",
+        "postalCode": "560003",
+        "addressRegion": "Karnataka",
         "addressCountry": "IN"
       },
       "serviceArea": {
