--- a/greenleaf-landfinder-main/index.html
+++ b/greenleaf-landfinder-main/index.html
@@ -9,6 +9,17 @@
     <meta name="author" content="Green Leaf Ventures Realty" />
     <link rel="canonical" href="https://greenleafventures.com" />
     
+    <!-- Favicon - Multiple sizes for better visibility -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-192.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-192.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/favicon-192.png" />
+    <link rel="shortcut icon" href="/favicon-192.png" />
+    <meta name="msapplication-TileImage" content="/favicon-192.png" />
+    <meta name="msapplication-TileColor" content="#004C45" />
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
