Update favicon to GLV branding and revert logo to original

--- a/greenleaf-landfinder-main/index.html
+++ b/greenleaf-landfinder-main/index.html
@@ -9,15 +9,15 @@
     <meta name="author" content="Green Leaf Ventures Realty" />
     <link rel="canonical" href="https://greenleafventures.com" />
     
-    <!-- Favicon - Multiple sizes for better visibility -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-192.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-192.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-192.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/favicon-192.png" />
-    <link rel="shortcut icon" href="/favicon-192.png" />
-    <meta name="msapplication-TileImage" content="/favicon-192.png" />
+    <!-- Favicon - Updated with new GLV Favicon -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/GLV Favicon.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/GLV Favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/GLV Favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/GLV Favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/GLV Favicon.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/GLV Favicon.png" />
+    <link rel="shortcut icon" href="/GLV Favicon.png" />
+    <meta name="msapplication-TileImage" content="/GLV Favicon.png" />
     <meta name="msapplication-TileColor" content="#004C45" />
     
     <!-- Google Fonts -->
