Optimize image loading performance: add preloading, lazy loading, smooth transitions, and mobile optimizations

--- a/greenleaf-landfinder-main/index.html
+++ b/greenleaf-landfinder-main/index.html
@@ -24,6 +24,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Preload Critical Images -->
+    <link rel="preload" as="image" href="/src/assets/hero-land.jpg" fetchpriority="high">
+    <link rel="preload" as="image" href="/lovable-uploads/GVL_LOGO_page-0003.png" fetchpriority="high">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Green Leaf Ventures Realty — Land, Procurement & Sales" />
